tests/paczka1/fuzzy1/37746538.err
Error in line 1: S622 A668 38,0
Error in line 6: S622 S622 76,6
Error in line 10: Dkj S622 -2,4
Error in line 19: TXjfBlP59 S321 80,5
Error in line 28: Dkj S786 84,5
Error in line 34: AafNqmXpO A668 65,6
